# wl-kernel

./: .gitignore  README.md  graph_similarity_results.xlsx  proba.py  pyproject.toml  test01.py  test03.py
tests/: 01generate_dataset.py  01generate_dataset_lite.py  02analisis_small_graph.py  analisis.ipynb  test01.py  test_kernel.py  vector_analysis.csv  vector_quality_analysis.csv
tests/data/: FVC2000_DB1_B_101_7.gpickle
tests/data/graph_dataset/: G_1000_0.1_mod_100.gpickle  G_1000_0.1_mod_50.gpickle  G_1000_0.1_orig.gpickle
tests/data/small_graph_dataset/: G_50_0.1_0_mod_10.gpickle  G_50_0.1_0_mod_15.gpickle  G_50_0.1_0_mod_5.gpickle  G_50_0.1_0_orig.gpickle
wl_kernel/: __init__.py  kernel.py  simhash.py  utils.py  wl.py
